# design-review-mcp

./: .gitignore  GETTING_STARTED.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
brain_region/: cli.py  reviews_db.py  server.py
brain_region/core/: report.py  workflow.py
brain_region/core/stages/: consensus.py  normalize.py  score.py
brain_region/eval/: cli.py  judge.py  knowledge.py  runner.py  schema.py  store.py
brain_region/eval/fixtures/: 002_python_api_no_signal.yaml  003_secret_config_doc.yaml
brain_region/knowledge/: yaml_provider.py
brain_region/output/: markdown.py
brain_region/providers/: litellm.py
brainregion/: __init__.py  cli.py  defaults.py  prior.py  reviews_db.py  server.py
brainregion/adapters/: __init__.py  _common.py  base.py
brainregion/adapters/generic/: __init__.py  adapter.py
brainregion/adapters/unity/: __init__.py  adapter.py
brainregion/core/: __init__.py  document.py  errors.py  planner.py  workflow.py
brainregion/core/consult/: engine.py  guard.py  parse.py  prompt.py  report.py  synthesize.py
brainregion/core/consultants/: __init__.py  base.yaml  challenge.yaml  loader.py  maintenance.yaml  simplicity.yaml  unity_ecs.yaml
brainregion/core/regions/: __init__.py  debugging.yaml  loader.py  memory.yaml  performance.yaml  planning.yaml  research.yaml  review.yaml  security.yaml  unity_ecs.yaml
brainregion/core/reviewers/: __init__.py  architecture.yaml  base.yaml  feasibility.yaml  loader.py  performance.yaml  planner.yaml  safety.yaml  visionary.yaml
brainregion/core/schema/: __init__.py  finding.schema.json  review-report.schema.json
brainregion/core/stages/: consensus.py  dedup.py  mediate.py  normalize.py  parse.py  prompt.py  review.py  score.py
brainregion/core/wake/: __init__.py  gate.py
brainregion/eval/: __init__.py  calibrate.py  check.py  cli.py  judge.py  metadata.py  outcome.py  routing.py  runner.py  schema.py  stats.py  store.py
brainregion/eval/fixtures/: 001_ecs_flowfield_plan.yaml
brainregion/eval/gold/: review_calibration.yaml  review_subtle.yaml
brainregion/eval/routing_fixtures/: routing_tasks.yaml
brainregion/knowledge/: __init__.py  base.py  yaml_provider.py
brainregion/output/: __init__.py  base.py  json.py  sarif.py
brainregion/presets/: model_reliability_prior.yaml
brainregion/privacy/: off.py  strict.py
brainregion/providers/: __init__.py  litellm.py
design_review/: cli.py  defaults.py  prior.py  reviews_db.py  server.py
design_review/core/: engine.py  pipeline.py  report.py
design_review/presets/: model_reliability_prior.yaml
design_review/privacy/: __init__.py  base.py  strict.py
design_review/providers/: base.py  litellm.py
docs/: config_precedence.md  config_precedence.zh-CN.md  endpoint_config.md  endpoint_config.zh-CN.md
scripts/: meta_eval.py
tests/: smoke_e2e.py  smoke_real.py  test_branding.py  test_budget_effort.py  test_calibrate.py  test_consensus.py  test_consult.py  test_dedup.py  test_defaults.py  test_e2e.py  test_eval_check.py  test_eval_harness.py  test_knowledge.py  test_model_routes.py  test_outcome_eval.py  test_outcome_memory_eval.py  test_outcome_stats.py  test_parsing.py  test_planner.py  test_prior.py  test_privacy.py  test_proxy_endpoints.py  test_regions.py  test_review_memory.py  test_reviewer_loader.py  test_routing_eval.py  test_visionary.py  test_wake_gate.py  test_workflow.py
(+31 files in other folders)
