[project]
name = "brainregion"
version = "0.1.0"
description = "BrainRegion（脑区）：AI collaboration infrastructure for review, consultation, planning, and memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.2.0",
    "litellm>=1.83.0,<2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
brainregion = "brainregion.cli:main"
brain-region = "brainregion.cli:main"
brain-region-mcp = "brainregion.server:main"
design-review-mcp = "brainregion.server:main"
design-review = "brainregion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brainregion"]

# packages = ["brainregion"] 已递归包含包内全部文件（reviewers/consultants/regions 的 yaml
# 和 schema/*.json 都在内），无需 force-include —— 它反而让 __init__.py 等被重复包含、wheel 构建失败。
[tool.hatch.build.targets.sdist]
exclude = [
  ".codegraph",
  ".brain-region",
  ".venv",
  "dist",
  "Assets",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# ruff（CI lint）：target 3.10，只抓真问题（F=pyflakes 未用导入/变量 + E/W 基本风格），
# 行长交给编辑器不管（ignore E501）。其余 lint（I/UP/B）等稳定后渐进加。
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]

# 测试文件常用 sys.path.insert / fixture 前置 import，放宽位置检查（主代码仍严格，逐个 noqa）
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"scripts/*" = ["E402"]
